  - Added setup check for gosaDepartments at the base object
  - Corrected js based disabling of widgets in Samba settings
  - Fixed issue with wrong set mail attributes in the setup
  - Added missing existance checks for group mail addresses
  - Fixed uid autogeneration which contained curly braces
  - Moved essential schema files back to the core package

* gosa 2.6.3
  - Fixed several issues, occurred when using user templates
  - Fixed problem with department creation, since GOsa 2.6.1
  - Fixed exponential escaping of special chars in dns record entries
  - Added samba domain information to samba tab
  - Removed readonly attributes from samba tab

* gosa 2.6.2
  - Updated german locales
  - Updated french locales
  - Updated spanish locales
  - Improved sieve handling, added more detailed error messages
  - Mail methods cleanup for kolab 2.2 / IMAP acls
  - Removed obsoleted GOlab mail method
  - Optimized system to group assignments when activating new devices
  - Add a choice for OPSI clients when activating new devices
  - Setup cleanups
  - Edit locking improvements, code cleanup

* gosa 2.6.1
  - Build seperate packages for plugin schema files
  - Make ACL editor more robust
  - Fix problem with self modify ACL detection
  - Increased all schema version numbers to make setup
    check work again
  - Added admin account migration to setup
  - Session expired dialog is now translated
  - Fixed problems with sieveManagement
  - Fixed issue with department saving and structuralObjectClass errors
  - Added local delivery flag to group mail
  - Fixed problem with sudoers creation
  - Fixed accidentally remove of non GOsa user accounts
  - Simplified FAI management
  - Fixed detection issues with password methods
  - Fixed issues with user templates and storing password methods
  - Removed forced dependency on GOsa-SI

* gosa 2.6
  - Redesign of ACL handling
    - Roles
    - Fine grained read, write, change controls down to
      the attributes